[package]
name = "crypto-price"
version = "0.1.0"
edition = "2021"
authors = [ "lijiachang <944581577@qq.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.4.0" }
worker-macros = { version="0.4.0" }
console_error_panic_hook = { version = "0.1.1" }

reqwest = { version = "0.12.7", features = ["json"]}
serde_json = "1.0.128"